added oauth commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Server=G1-JMML114-L\\SQLEXPRESS;Database=InvestmentAdvisoryDb;User Id=sa;Password=rajnagar1@R;TrustServerCertificate=True;"
   },
 
+  //start
+  //Add google
+  //keys
+
+
+  //end
   "Logging": {
     "LogLevel": {
       "Default": "Information",
