added jwt auth and Oauth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "k95/bDK/J1c4AA+ppS7ihgjqMXWRDB/j/JuQimBY7To=" // Replace with your secret key
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=G1-JMML114-L\\SQLEXPRESS;Database=InvestmentAdvisoryDb;User Id=sa;Password=rajnagar1@R;TrustServerCertificate=True;"
   },
@@ -9,5 +13,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "GoogleKeys": {
+    "ClientId": "1024970798393-k1531gdt02tce8dp029hh1qdd2ka08bm.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
+
   "AllowedHosts": "*"
 }
